Using footer-push and footer with fixed position to keep it from overlapping or bugging out from bottom

--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,15 @@ header span#bit {
   margin:0 20px;
 }
 
+.footer-push {
+  height:100px;
+  clear:both;
+}
+
 footer {
   background-color:#44bbbb;
   color:#fafafa;
-  position:absolute;
+  position:fixed;
   bottom:0;
   width:100%;
   height:100px;
